--- a/hs/keepintouch.cabal
+++ b/hs/keepintouch.cabal
@@ -23,5 +23,6 @@ executable keepintouch
   build-depends:       time ==1.4.2
   build-depends:       old-locale ==1.0.0.6
   build-depends:       random ==1.0.1.1
+  build-depends:       array ==0.5.0.0
   -- hs-source-dirs:
   default-language:    Haskell2010
