--- a/hs/keepintouch.cabal
+++ b/hs/keepintouch.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                keepintouch
-version:             0.1.0.0
+version:             3.0.0.0
 -- synopsis:
 -- description:
 -- license:
@@ -20,9 +20,9 @@ executable keepintouch
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.7 && <4.8
-  build-depends:       time ==1.4.2
-  build-depends:       old-locale ==1.0.0.6
-  build-depends:       random ==1.0.1.1
-  build-depends:       array ==0.5.0.0
+  build-depends:       time ==1.4.*
+  build-depends:       old-locale ==1.0.*
+  build-depends:       random ==1.0.*
+  build-depends:       array ==0.5.*
   -- hs-source-dirs:
   default-language:    Haskell2010
